--- a/package.json
+++ b/package.json
@@ -18,25 +18,32 @@
     "acorn": "^8.4.1",
     "acorn-walk": "^8.1.1",
     "axios": "^0.21.1",
+    "brainly-scraper-v2": "^2.0.4-1",
     "build": "^0.1.4",
     "chalk": "^4.1.1",
     "cheerio": "^1.0.0-rc.10",
     "diacritics": "^1.3.0",
     "dotenv": "^10.0.0",
+    "file-type": "^16.5.3",
     "filesize": "^7.0.0",
     "fluent-ffmpeg": "^2.1.2",
     "form-data": "^4.0.0",
+    "g-i-s": "^2.1.6",
     "gifencoder": "^2.0.1",
+    "google-it": "^1.6.2",
     "got": "^11.8.2",
+    "html-filter": "^4.3.0",
     "jimp": "^0.16.1",
     "moment-timezone": "^0.5.33",
     "monk-middleware-wrap-non-dollar-update": "^0.2.1",
     "node-webpmux": "^3.1.0",
     "parse-ms": "^2.1.0",
+    "playstore-scraper": "^1.0.1",
     "prompt-sync": "^4.2.0",
     "request-promise-native": "^1.0.9",
     "typescript": "^4.3.5",
     "util": "^0.12.4",
+    "wikipedia": "^1.1.2",
     "yt-search": "^2.10.0"
   },
   "devDependencies": {
