--- a/package.json
+++ b/package.json
@@ -19,10 +19,8 @@
     "acorn-walk": "^8.1.1",
     "axios": "^0.21.1",
     "brainly-scraper-v2": "^2.0.4-1",
-    "build": "^0.1.4",
     "chalk": "^4.1.1",
     "cheerio": "^1.0.0-rc.10",
-    "diacritics": "^1.3.0",
     "dotenv": "^10.0.0",
     "file-type": "^16.5.3",
     "filesize": "^7.0.0",
@@ -44,13 +42,15 @@
     "typescript": "^4.3.5",
     "util": "^0.12.4",
     "wikipedia": "^1.1.2",
-    "yt-search": "^2.10.0"
+    "yt-search": "^2.10.0",
+    "ytdl-core": "^4.9.1"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.0.2",
     "@types/fluent-ffmpeg": "^2.1.18",
     "@types/gifencoder": "^2.0.1",
-    "@types/ms": "^0.7.31"
+    "@types/ms": "^0.7.31",
+    "@types/monk": "^6.0.0"
   },
   "scripts": {
     "test": " \"echo \\\"Error: no test specified\\\" && exit 1\"",
