--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whatsapp-bot",
-  "version": "1.0.3",
+  "version": "1.0.0",
   "description": "",
   "main": "index.ts",
   "directories": {
@@ -49,8 +49,10 @@
     "@types/crypto-js": "^4.0.2",
     "@types/fluent-ffmpeg": "^2.1.18",
     "@types/gifencoder": "^2.0.1",
+    "@types/monk": "^6.0.0",
     "@types/ms": "^0.7.31",
-    "@types/monk": "^6.0.0"
+    "@types/pino": "^6.3.11",
+    "@types/ws": "^7.4.7"
   },
   "scripts": {
     "test": " \"echo \\\"Error: no test specified\\\" && exit 1\"",
