--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html-filter": "^4.3.0",
     "jimp": "^0.16.1",
     "moment-timezone": "^0.5.33",
+    "monk": "^5.0.2",
     "monk-middleware-wrap-non-dollar-update": "^0.2.1",
     "node-webpmux": "^3.1.0",
     "parse-ms": "^2.1.0",
