--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=isiURLMONGODBLU
+MONGO_URI=mongodb+srv://exampleusername:examplepaswords@cluster0.w0wpo.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 bot=RA BOT
-antispam=7000
+antispam=8000
 ownerNumber=33753045534@s.whatsapp.net
