--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "whatsapp-bot",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.4",
+  "description": "Whatsapp bot",
   "main": "index.ts",
   "directories": {
     "lib": "lib"
@@ -33,7 +33,7 @@
     "html-filter": "^4.3.0",
     "jimp": "^0.16.1",
     "moment-timezone": "^0.5.33",
-    "monk": "^5.0.2",
+	"monk": "^5.0.2",
     "monk-middleware-wrap-non-dollar-update": "^0.2.1",
     "node-webpmux": "^3.1.0",
     "parse-ms": "^2.1.0",
@@ -65,7 +65,12 @@
     "url": "git+https://github.com/rayyreall/Whatsapp_Bot.git"
   },
   "keywords": [
-    "Whatsapp-bot"
+    "Whatsapp-bot",
+	"bot",
+	"BotWhatsapp",
+	"whatsapp-bot",
+	"botwa",
+	"wabot"
   ],
   "author": "I`am Ra",
   "license": "MIT",
