kalo limit pakein cookie ae

--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@ MONGO_URI=mongodb+srv://exampleusername:examplepaswords@cluster0.w0wpo.mongodb.n
 bot=RA BOT
 antispam=8000
 ownerNumber=33753045534@s.whatsapp.net
+cookieIg=
+cookieFacebook=
+cookiePinterest=
+cookieTiktok=
+cookieYoutube=
+xcliendatayoutube=
+exampleIsiCookie=tt_webid_v2=3131318; tt_webid=1321 blablablabla
