--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/mongodb": "^4.0.7",
     "@types/prompt-sync": "^4.1.1",
     "@types/yt-search": "^2.3.2",
+    "@vitalets/google-translate-api": "^7.0.0",
     "acorn": "^8.4.1",
     "acorn-walk": "^8.1.1",
     "axios": "^0.21.1",
@@ -41,6 +42,7 @@
     "playstore-scraper": "^1.0.1",
     "prompt-sync": "^4.2.0",
     "request-promise-native": "^1.0.9",
+    "robotjs": "^0.6.0",
     "typescript": "^4.3.5",
     "util": "^0.12.4",
     "wikipedia": "^1.1.2",
@@ -51,7 +53,8 @@
     "@types/crypto-js": "^4.0.2",
     "@types/fluent-ffmpeg": "^2.1.18",
     "@types/gifencoder": "^2.0.1",
-    "@types/ms": "^0.7.31"
+    "@types/ms": "^0.7.31",
+    "@types/nightmare": "^2.10.5"
   },
   "scripts": {
     "test": " \"echo \\\"Error: no test specified\\\" && exit 1\"",
