--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@types/crypto-js": "^4.0.2",
     "@types/fluent-ffmpeg": "^2.1.18",
     "@types/gifencoder": "^2.0.1",
-    "@types/ms": "^0.7.31",
+    "@types/ms": "^0.7.31"
   },
   "scripts": {
     "test": " \"echo \\\"Error: no test specified\\\" && exit 1\"",
