--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MONGO_URI=mongodb+srv://exampleusername:examplepaswords@cluster0.w0wpo.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 bot=RA BOT
 antispam=8000
-ownerNumber=33753045534@s.whatsapp.net
+ownerNumber=62895704151428@s.whatsapp.net
 cookieIg=
 cookieFacebook=
 cookiePinterest=
